--- a/app/www/index.html
+++ b/app/www/index.html
@@ -28,7 +28,7 @@
     </div>
     
     <!-- cordova js -->
-    <!-- <script src="cordova.js"></script> -->
+    <script src="cordova.js"></script>
     
     <script data-main="js/main.js" src="js/lib/require.js"></script>
   </body>
