--- a/app/www/index.html
+++ b/app/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval';">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval';"> -->
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
@@ -16,9 +16,9 @@
   </head>
   <body>
     <div class="appContainer">
-    	<div id="app-container">
-    	  <div id="app-main"></div>
-    	</div>
+      <div id="app-container">
+        <div id="app-main"></div>
+      </div>
     </div>
     
     <!-- cordova js -->
