remove backbone dependencies, add react libs

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -16,14 +16,10 @@
   </head>
   <body>
 
-    <div class="appContainer">
-      <div id="app-container">
-        <div id="app-main"></div>
-      </div>
-    </div>
+    <div id="app-main" class="app-main"></div>
     
     <!-- cordova js -->
     <script src="cordova.js"></script>
-    <script data-main="js/main.js" src="js/lib/require.js"></script>
+    <script src="js/lib/require.js" data-main="js/main.js"></script>
   </body>
 </html>
