--- a/application/src/index.html
+++ b/application/src/index.html
@@ -21,6 +21,8 @@
         <div id="app-main"></div>
       </div>
     </div>
+
+    <div class="js-pageLink">sssss</div>
     
     <!-- cordova js -->
     <script src="cordova.js"></script>
