--- a/application/src/index.html
+++ b/application/src/index.html
@@ -16,9 +16,9 @@
   </head>
   <body>
 
-    <div class="appContainer">
-      <div id="app-container">
-        <div id="app-main"></div>
+    <div class="appContainer" class="appContainer">
+      <div id="app-container" class="app-container">
+        <div id="app-main" class="app-main"></div>
       </div>
     </div>
     
