--- a/application/src/index.html
+++ b/application/src/index.html
@@ -16,11 +16,13 @@
   </head>
   <body>
 
-    <div class="appContainer" class="appContainer">
+    <div id="appContainer" class="appContainer">
       <div id="app-container" class="app-container">
         <div id="app-main" class="app-main"></div>
       </div>
     </div>
+
+    <div id="app-popupWrap" class="b-popups js-popupHolder"></div>
     
     <!-- cordova js -->
     <script src="cordova.js"></script>
